Update documentation to include GraphQL API creation using introspection

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -86,7 +86,9 @@ nav:
                 - Expose a SOAP Service as a REST API: design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api.md
                 - Generate REST API from SOAP Backend: design/create-api/create-rest-api/generate-rest-api-from-soap-backend.md
                 - Test a REST API: design/create-api/create-rest-api/test-a-rest-api.md
-            - GraphQL APIs: design/create-api/create-a-graphql-api.md
+            - GraphQL APIs: 
+                - Create a GraphQL API: design/create-api/create-graphql-api/create-a-graphql-api.md
+                - Create a GraphQL API using Introspection: design/create-api/create-graphql-api/create-a-graphql-api-using-introspection.md
             - Streaming APIs:
                 - Streaming API Overview: design/create-api/create-streaming-api/streaming-api-overview.md
                 - Create a WebSocket API: design/create-api/create-streaming-api/create-a-websocket-streaming-api.md
@@ -785,7 +787,7 @@ plugins:
               'get-started/quick-start-guide/streaming-qsg.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/streaming-quick-start-guide/'
               'learn/design-api/create-api/create-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api/'
               'learn/design-api/create-api/create-a-rest-api-from-an-openapi-definition.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition/'
-              'learn/design-api/create-api/create-a-graphql-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-a-graphql-api/'
+              'learn/design-api/create-api/create-a-graphql-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-graphql-api/create-a-graphql-api/'
               'learn/design-api/create-api/create-a-websocket-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-streaming-api/create-a-websocket-streaming-api/'
               'learn/design-api/create-api/expose-a-soap-service-as-a-rest-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api/'
               'learn/design-api/create-api/generate-rest-api-from-soap-backend.md': 'https://apim.docs.wso2.com/en/4.4.0/design/create-api/create-rest-api/generate-rest-api-from-soap-backend/'
