Add rule validator reference to the governance doc.

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -86,7 +86,9 @@ nav:
                 - Expose a SOAP Service as a REST API: design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api.md
                 - Generate REST API from SOAP Backend: design/create-api/create-rest-api/generate-rest-api-from-soap-backend.md
                 - Test a REST API: design/create-api/create-rest-api/test-a-rest-api.md
-            - GraphQL APIs: design/create-api/create-a-graphql-api.md
+            - GraphQL APIs:
+                - Create a GraphQL API: design/create-api/create-graphql-api/create-a-graphql-api.md
+                - Create a GraphQL API using Introspection: design/create-api/create-graphql-api/create-a-graphql-api-using-introspection.md
             - Streaming APIs:
                 - Streaming API Overview: design/create-api/create-streaming-api/streaming-api-overview.md
                 - Create a WebSocket API: design/create-api/create-streaming-api/create-a-websocket-streaming-api.md
@@ -342,6 +344,14 @@ nav:
                 - Content Safety: ai-gateway/ai-guardrails/safety-categories/content-safety.md
                 - Content Usage Control: ai-gateway/ai-guardrails/safety-categories/content-usage-control.md
                 # - PII Safety: ai-gateway/ai-guardrails/safety-categories/pii-safety.md
+    - Governance:
+        - Overview: governance/overview.md
+        - Concept: governance/governance-concept.md
+        - Quick Start Guide: governance/quick-start-guide.md
+        - How to Use:
+            - Admin Capabilities: governance/api-governance-admin-capabilities.md
+            - API Creator/Publisher Capabilities: governance/api-governance-api-creator-capabilities.md
+        - Dashboards: governance/governance-dashboards.md
     - Analytics:
         - API Analytics:
             - Choreo Based Analytics: 
