--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -371,6 +371,8 @@ nav:
                 - Service Catalog API v1: reference/product-apis/service-catalog-apis/service-catalog-v1/service-catalog-v1.md
             - DevOps APIs:
                 - DevOps API v0: reference/product-apis/devops-apis/devops-v0/devops-v0.md
+            - Governance APIs:
+                  - Governance API v1: reference/product-apis/governance-apis/governance-v1/governance-v1.md
             - Advanced Configurations: reference/product-apis/advanced-configurations.md
         - Product Configurations:
             - Understand the New Configuration Model: reference/understanding-the-new-configuration-model.md
