--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -16,8 +16,8 @@
 # under the License.
 
 # Project information
-site_name: WSO2 API Manager Documentation 4.5.0
-site_description: Documentation for WSO2 API Manager 4.5.0
+site_name: WSO2 API Manager Documentation
+site_description: Documentation for WSO2 API Manager
 site_author: WSO2
 site_url: https://apim.docs.wso2.com/en/4.5.0/
 
