--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -153,7 +153,6 @@ nav:
                 - Configure Message Builders and Formatters: design/api-policies/regular-gateway-policies/configuring-message-builders-formatters.md
                 - JWT claim based access validator: design/api-policies/regular-gateway-policies/jwt-claim-based-access-validator.md
                 - Revoke One Time Tokens Policy: design/api-policies/regular-gateway-policies/revoke-one-time-tokens-policy.md
-                - AI Policies: design/api-policies/regular-gateway-policies/ai-policies.md
         - API Security:
             - Authentication:
                 - Overview: design/api-security/api-authentication/api-authentication-overview.md
@@ -319,9 +318,19 @@ nav:
         - User Account Management:
             - Recover Password: consume/user-account-management/recover-password.md
             - Change Password: consume/user-account-management/change-dev-portal-password.md
-    - Integrate:
-        - Develop Integrations:
-            - Publish Integrations to the API Manager: integrate/develop/working-with-service-catalog.md
+    - AI Gateway:
+        - Overview: ai-gateway/overview.md
+        - Getting started with AI Gateway: ai-gateway/getting-started-with-ai-gateway.md
+        - AI Backend Security: ai-gateway/ai-backend-security.md
+        - Rate Limiting: ai-gateway/rate-limiting.md
+        - Multi-model Routing:
+            - Overview: ai-gateway/multi-model-routing/overview.md
+            - Load Balancing: ai-gateway/multi-model-routing/load-balancing.md
+            - Failover: ai-gateway/multi-model-routing/failover.md
+        - AI Vendor Management:
+            - Default AI Vendors: ai-gateway/ai-vendor-management/default-ai-vendors.md
+            - Onboarding a Custom AI Vendor: ai-gateway/ai-vendor-management/onboarding-a-custom-ai-vendor.md
+        - Analytics: ai-gateway/analytics.md
     - Governance:
           - Overview: governance/overview.md
           - Concept: governance/governance-concept.md
