Add AI Gateway docs

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -95,8 +95,6 @@ nav:
                 - Create a Streaming API from an AsyncAPI Definition: design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md
                 - Test a WebSub/WebHook API: design/create-api/create-streaming-api.md
             - Create an API Using a Service: design/create-api/create-an-api-using-a-service.md
-            #- Build APIs in Integration Studio: design/create-api/api-integration-studio.md
-            - AI APIs: design/create-api/create-ai-api/create-an-ai-api.md
         - Create APIs with AI: design/create-api/create-api-with-ai.md
         - Create API Revisions: design/create-api/create-api-revisions.md
         - Add Custom Properties to APIs: design/create-api/adding-custom-properties-to-apis.md
@@ -151,7 +149,6 @@ nav:
                 - Configure Message Builders and Formatters: design/api-policies/regular-gateway-policies/configuring-message-builders-formatters.md
                 - JWT claim based access validator: design/api-policies/regular-gateway-policies/jwt-claim-based-access-validator.md
                 - Revoke One Time Tokens Policy: design/api-policies/regular-gateway-policies/revoke-one-time-tokens-policy.md
-                - AI Policies: design/api-policies/regular-gateway-policies/ai-policies.md
         - API Security:
             - Authentication:
                 - Overview: design/api-security/api-authentication/api-authentication-overview.md
@@ -312,9 +309,21 @@ nav:
         - User Account Management:
             - Recover Password: consume/user-account-management/recover-password.md
             - Change Password: consume/user-account-management/change-dev-portal-password.md
-    - Integrate:
-        - Develop Integrations:
-            - Publish Integrations to the API Manager: integrate/develop/working-with-service-catalog.md
+    - AI Gateway:
+        - Overview: ai-gateway/overview.md
+        - Getting started with AI Gateway: ai-gateway/getting-started-with-ai-gateway.md
+        - AI Backend Security: ai-gateway/ai-backend-security.md
+        - Rate Limiting: ai-gateway/rate-limiting.md
+        - Multi-Model Routing:
+            - Overview: ai-gateway/multi-model-routing/overview.md
+            - Load Balancing: ai-gateway/multi-model-routing/load-balancing.md
+            - Failover: ai-gateway/multi-model-routing/failover.md
+        - AI Vendor Management:
+            - Default AI Vendors: ai-gateway/ai-vendor-management/default-ai-vendors.md
+            - Custom AI Vendors:
+                - Overview: ai-gateway/ai-vendor-management/custom-ai-vendors/overview.md
+                - Custom Connector: ai-gateway/ai-vendor-management/custom-ai-vendors/custom-connector.md
+                - Onboarding Anthropic's Claude: ai-gateway/ai-vendor-management/custom-ai-vendors/onboarding-anthropic-claude.md
     - Analytics:
         - API Analytics:
             - Choreo Based Analytics: 
@@ -476,11 +485,6 @@ nav:
             - Configure the Azure AD as a Key Manager: administer/key-managers/configure-azure-ad-key-manager.md
         - Advanced Configurations: administer/advanced-configurations.md
         - Manage Role based access control for the Admin portal: administer/role-based-access-control.md
-        - AI Vendors:
-            - Custom AI Vendors:
-                - Overview: administer/ai-vendors/custom-ai-vendor.md
-                - Anthropic's Claude as a Custom AI Vendor: administer/ai-vendors/claude-as-a-custom-vendor.md
-            - Write your own Connector: administer/ai-vendors/write-ai-vendor-connector.md
     - Install and Setup:
         - Install and Setup Overview: install-and-setup/install-and-setup-overview.md
         - Install:
