Remove docs for Scala and Flash SDK

--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1703,7 +1703,7 @@
                             "name": "supported_languages",
                             "type": "string",
                             "required": false,
-                            "default": "android,java,scala,csharp,dart,flash,groovy,javascript,jmeter,nodejs,perl,php,python,ruby,swift,clojure,asyncScala,csharpDotNet2",
+                            "default": "android,java,csharp,dart,groovy,javascript,jmeter,nodejs,perl,php,python,ruby,swift,clojure,csharpDotNet2",
                             "possible": "",
                             "description": "Supported programming languages."
                         }
