Document preserveCredentials parameter in REST API and --preserve-credentials flag in APICTL

--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -4259,6 +4259,13 @@ paths:
             Gateway environment of the exported APIs
           schema:
             type: string
+        - name: preserveCredentials
+          in: query
+          description: |
+            Preserve endpoint configuration credentials
+          required: false
+          schema:
+            type: boolean
       responses:
         200:
           description: |
