--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -4017,6 +4017,13 @@ paths:
           schema:
             type: boolean
             default: false
+        - name: preserveCredentials
+          in: query
+          description: |
+            Preserve endpoint configuration credentials
+          required: false
+          schema:
+            type: boolean
       responses:
         200:
           description: |
