Update docs with apictl preserve credentials flag details

--- a/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
@@ -3999,6 +3999,14 @@ paths:
             Gateway environment of the exported APIs
           schema:
             type: string
+        - name: preserveCredentials
+          in: query
+          description: |
+            Preserve endpoint configuration credentials and secret parameters
+          required: false
+          schema:
+            type: boolean
+            default: false
       responses:
         200:
           description: |
