--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -628,7 +628,7 @@ nav:
                 - API Manager: install-and-setup/setup/deployment-best-practices/performance-tests-results.md
                 # - API Manager (Streaming APIs): install-and-setup/setup/deployment-best-practices/performance-tests-results-async.md
                 # - API Manager (GraphQL APIs): install-and-setup/setup/deployment-best-practices/performance-tests-results-graphql.md
-                # - Token Persistence: install-and-setup/setup/deployment-best-practices/performance-test-results-token-persistence.md
+                - Token Persistence: install-and-setup/setup/deployment-best-practices/performance-test-results-token-persistence.md
             - Supported Cipher Suites: install-and-setup/setup/reference/supported-cipher-suites.md
     - Tutorials:
           - Tutorials Overview: tutorials/tutorials-overview.md
