--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -602,7 +602,15 @@ nav:
                     - Configure Multi-DC Deployment - Pattern 2: install-and-setup/setup/multi-dc-deployment/configuring-multi-dc-deployment-pattern-2.md
             - Deploy on Kubernetes:
                 - API-M on K8s:
-                    - Deploy API-M on K8s Using Helm Resources: install-and-setup/install/deploying-api-manager-with-kubernetes-resources.md
+                    - Kubernetes Deployment Overeview: install-and-setup/setup/kubernetes-deployment/kubernetes/kubernetes-deployment-overview.md
+                    - All-In-One Deployment:
+                        - Configure a Single API-M Node: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-0-all-in-one.md
+                        - Configure an Active-Active API-M Deployment: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-1-all-in-one-HA.md
+                    - Distributed Deployment:
+                        - Configure Simple Scalable Deployment (Recommended): install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-3-ACP_TM_GW.md
+                        - Configure Simple Scalable Deployment with Key Manager Separation: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-4-ACP_TM_GW_KM.md
+                        - Configure Gateway Separation Deployment: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-2-all-in-one_GW.md
+                        - Configure Gateway and Key Manager Separation Deployment: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-5-all-in-one_GW_KM.md
             - Deployment Best Practices:
                 - Deployment Checklist: install-and-setup/setup/deployment-best-practices/production-deployment-guidelines.md
                 - Security Guidelines for a Production Deployment: install-and-setup/setup/deployment-best-practices/security-guidelines-for-production-deployment.md
