--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -5907,6 +5907,27 @@
                 }
             ],
             "exampleFile": "org_configuration.toml"
+        },
+        {
+            "title": "Service Provider Configurations",
+            "options": [
+                {
+                    "name": "service_provider",
+                    "required": false,
+                    "description": "This includes configurations for Service Provider related properties.",
+                    "params": [
+                        {
+                            "name": "use_username_as_sub_claim",
+                            "type": "boolean",
+                            "required": false,
+                            "default": "false",
+                            "possible": "",
+                            "description": "Use username as the subject claim of application tokens instead of userId."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "service_provider.toml"
         }
     ]
 }
