--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -450,6 +450,27 @@
             "exampleFile": "apim.jwt.issuer.claim_mapping.toml"
         },
         {
+            "title": "API-M gateway type configurations",
+            "options": [
+                {
+                    "name": "apim",
+                    "required": true,
+                    "description": "Configuring the gateway types used by API Manager.",
+                    "params": [
+                        {
+                            "name": "gateway_type",
+                            "type": "string",
+                            "required": true,
+                            "default": "Regular,APK,AWS",
+                            "possible": "",
+                            "description": "Users can configure supported gateway types through the configuration. These pre-configured options will be available under gateway environment types when creating new gateway environments via the Admin Portal."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "apim.toml"
+        },
+        {
             "title": "API-M gateway environment configurations",
             "options": [
                 {
