Add wsSharedEventLoopPoolSize configurations for Websocket connections

--- a/en/tools/config-catalog-generator/data/_ws-transport.toml
+++ b/en/tools/config-catalog-generator/data/_ws-transport.toml
@@ -2,4 +2,5 @@
 sender.enable = false
 sender.parameters.ws.outflow.dispatch.sequence = "outflowDispatchSeq"
 sender.parameters.ws.outflow.dispatch.fault.sequence = "outflowFaultSeq"
+sender.parameters.wsSharedEventLoopPoolSize = 5
 sender.parameter.customParameter = ""
