--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -5721,7 +5721,7 @@
                             "required": false,
                             "default": "false",
                             "possible": "",
-                            "description": "Use username as the subject claim of application tokens instead of userId."
+                            "description": "Use username as the subject claim of application tokens instead of userId. Note that this configuration is only available from update level 26 onwards."
                         }
                     ]
                 }
